Showing search files to gui